Added Poppins font, custom variant for badge style outline border, custom style for all tables and overwrite for primary and secondary colors

--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -1,19 +1,29 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap");
+// @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap");
+// @import url("https://fonts.googleapis.com/css?family=Poppins:200,300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
 
 $font-size-base: 0.8125rem; // Assumes the browser default, typically `16px`
 $font-size-lg: $font-size-base * 1.25;
 $font-size-sm: $font-size-base * 0.8;
-$font-family-base: "Open Sans", sans-serif;
+// $font-family-base: "Open Sans", sans-serif;
+$font-family-base: "Poppins", sans-serif;
 
 $input-btn-focus-width: 0.06rem;
 $btn-focus-box-shadow: none !important;
 $btn-box-shadow: none;
 $btn-active-box-shadow: none;
 
+$secondary: #003147 !default;
+$primary: #03a9f4 !default;
+
 @import "~bootstrap/scss/bootstrap.scss";
 @import "~bootstrap-vue/src/index.scss";
 
 $mainFontSize: 13px;
+
+body {
+	background-color: #ebeef0;
+}
 
 .font-sm {
 	font-size: 10px !important;
@@ -30,6 +40,71 @@ $mainFontSize: 13px;
 .c-pointer {
 	cursor: pointer;
 }
-// .custom-select {
-// 	font-size: 1em;
-// }
+
+.badge {
+	font-weight: 500;
+}
+
+[class*="badge-outline-"] {
+	background: unset;
+	border-style: solid;
+	border-width: 1px;
+	font-size: 85%;
+}
+
+.badge-outline-primary {
+	border-color: var(--primary);
+	color: var(--primary);
+}
+
+.badge-outline-secondary {
+	border-color: var(--secondary);
+	color: var(--secondary);
+}
+
+.badge-outline-success {
+	border-color: var(--success);
+	color: var(--success);
+}
+
+.badge-outline-danger {
+	border-color: var(--danger);
+	color: var(--danger);
+}
+
+.badge-outline-warning {
+	border-color: var(--warning);
+	color: var(--warning);
+}
+
+.badge-outline-info {
+	border-color: var(--info);
+	color: var(--info);
+}
+
+.table {
+	th {
+		font-weight: 500;
+	}
+	td {
+		font-weight: 300;
+	}
+	&.b-table[aria-busy="true"] {
+		opacity: 0.4;
+		user-select: none;
+		// position: relative;
+		// z-index: 1;
+		// &::before {
+		// 	width: 100%;
+		// 	height: 100%;
+		// 	left: 0;
+		// 	top: 0;
+		// 	content: "\f110";
+		// 	font-family: "fontAwesome";
+		// 	color: var(--primary);
+		// 	position: absolute;
+		// 	z-index: 5;
+		// 	font-weight: 900;
+		// }
+	}
+}
