--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -47,7 +47,7 @@ $fontWeightSizes: 100, 200, 300, 400, 500, 600, 700, 800, 900;
 
 @each $size in $fontWeightSizes {
 	.font-weight-#{$size} {
-		font-weight: $size;
+		font-weight: $size !important;
 	}
 }
 
